--- a/source/catalog.html
+++ b/source/catalog.html
@@ -89,15 +89,19 @@
     <section class="main__catalog catalog">
       <h2 class="visually-hidden">Jewellery shop assortment</h2>
       <div class="catalog__container">
-        <section class="catalog__filter catalog__filter--nojs">
+        <section class="catalog__filter"> <!-- catalog__filter--nojs -->
           <h3 class="visually-hidden">Filter products</h3>
-          <div class="catalog__wrapper">
+          <button class="catalog__filter-button" id="filter">
+            Filter
+          </button>
+          <div class="catalog__filter-wrapper">
             <form class="catalog__filter filter" action="https://echo.htmlacademy.ru" method="GET">
-              <div class="filter__inner">
-                <div class="filter__block accordion filter__block--product">
+              <div class="filter__inner accordion accordion--js">
+                <div class="filter__block accordion__item filter__block--product">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Product</div>
-                    <button class="filter__accordion-btn accordion__toggler" type="button" aria-label="Open / Close filter">
+                    <button class="filter__head-button accordion__button" type="button">
+                      <span class="visually-hidden">Open / Close faq section</span>
                       <svg width="17" height="10">
                         <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
                         <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
@@ -107,28 +111,29 @@
                   <div class="accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
-                        <input type="checkbox" id="necklaces" name="necklaces" value="necklaces" checked>
+                        <input type="checkbox" class="visually-hidden" id="necklaces" name="necklaces" value="necklaces" checked>
                         <label class="filter__checkbox-label" for="necklaces">Necklaces</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" id="chokers" name="chokers" value="chokers" checked>
+                        <input type="checkbox" class="visually-hidden" id="chokers" name="chokers" value="chokers" checked>
                         <label class="filter__checkbox-label" for="chokers">Chokers</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" id="rings" name="rings" value="rings">
+                        <input type="checkbox" class="visually-hidden" id="rings" name="rings" value="rings">
                         <label class="filter__checkbox-label" for="rings">Rings</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" id="earrings" name="earrings" value="earrings" checked>
+                        <input type="checkbox" class="visually-hidden" id="earrings" name="earrings" value="earrings" checked>
                         <label class="filter__checkbox-label" for="earrings" >Earrings</label>
                       </li>
                     </ul>
                   </div>
                 </div>
-                <div class="filter__block accordion filter__block--material">
+                <div class="filter__block accordion__item filter__block--material">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Material</div>
-                    <button class="filter__accordion-btn accordion__toggler" type="button" aria-label="Open / Close filter">
+                    <button class="filter__head-button accordion__button" type="button">
+                      <span class="visually-hidden">Open / Close faq section</span>
                       <svg width="17" height="10">
                         <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
                         <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
@@ -138,20 +143,21 @@
                   <div class="accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
-                        <input type="checkbox" id="gold" name="gold" value="gold" checked>
+                        <input type="checkbox" class="visually-hidden" id="gold" name="gold" value="gold" checked>
                         <label class="filter__checkbox-label" for="gold">Gold</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" id="silver" name="silver" value="silver">
+                        <input type="checkbox" class="visually-hidden" id="silver" name="silver" value="silver">
                         <label class="filter__checkbox-label" for="silver">Silver</label>
                       </li>
                     </ul>
                   </div>
                 </div>
-                <div class="filter__block accordion filter__block--collection">
+                <div class="filter__block accordion__item filter__block--collection">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Collection</div>
-                    <button class="filter__accordion-btn accordion__toggler" type="button" aria-label="Open / Close accordion section">
+                    <button class="filter__head-button accordion__button" type="button">
+                      <span class="visually-hidden">Open / Close faq section</span>
                       <svg width="17" height="10">
                         <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
                         <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
@@ -161,20 +167,21 @@
                   <div class="accordion__content">
                     <ul class="filter__list accordion__inner">
                       <li class="filter__item">
-                        <input type="checkbox" id="flamingo" name="flamingo" value="flamingo">
+                        <input type="checkbox" class="visually-hidden" id="flamingo" name="flamingo" value="flamingo">
                         <label class="filter__checkbox-label" for="flamingo">Pink flamingo</label>
                       </li>
                       <li class="filter__item">
-                        <input type="checkbox" id="dreams" name="dreams" value="dreams" checked>
+                        <input type="checkbox" class="visually-hidden" id="dreams" name="dreams" value="dreams" checked>
                         <label class="filter__checkbox-label" for="dreams">Dreams</label>
                       </li>
                     </ul>
                   </div>
                 </div>
-                <div class="filter__block accordion filter__block--price">
+                <div class="filter__block accordion__item filter__block--price">
                   <div class="filter__block-head">
                     <div class="filter__subtitle">Price</div>
-                    <button class="filter__accordion-btn accordion__toggler" type="button" aria-label="Open / Close accordion section">
+                    <button class="filter__head-button accordion__button" type="button">
+                      <span class="visually-hidden">Open / Close faq section</span>
                       <svg width="17" height="10">
                         <use class="accordion__icon accordion__icon--open" href="img/sprite.svg#icon-arrow-down"></use>
                         <use class="accordion__icon accordion__icon--close" href="img/sprite.svg#icon-arrow-up"></use>
@@ -194,7 +201,7 @@
                 </div>
                 <div class="filter__buttons">
                   <button class="filter__button" id="filter-submit" type="submit">Apply</button>
-                  <button class="filter__button" id="filter-reset" type="reset">Clear All</button>
+                  <button class="filter__button filter__button--white" id="filter-reset" type="reset">Clear All</button>
                 </div>
                 <button class="filter__close" type="button" id="filter-close">
                   <span class="visually-hidden">Close popup</span>
